Fix bug showing x-axis scrollbar on resize

--- a/src/components/game-list/styles/GameList.scss
+++ b/src/components/game-list/styles/GameList.scss
@@ -1,4 +1,6 @@
 .GameList {
+  overflow-x: hidden;
+
   .loading {
     font-size: var(--fs-2);
     color: var(--clr-neutral-variant);
